it is a very satisfying of an analysis I have done here

--- a/scripts/R34_human_entercoccus_bloom.Rmd
+++ b/scripts/R34_human_entercoccus_bloom.Rmd
@@ -23,6 +23,80 @@ enterococcus_abundance <- read_csv('../data/153_combined_META.csv') %>%
   mutate(Entero_log10 = log10(Enterococcus_relab + 1e-05)) %>% 
   select(pid, sdrt, sampleid,Enterococcus_relab, Entero_log10 )
 ```
+# distribution of the data 
+
+```{r}
+library(patchwork) 
+
+# ---  Calculate Summary Statistics Per Patient ---
+
+# First, get the total number of samples for each patient.
+total_samples_per_patient <- enterococcus_abundance %>%
+  group_by(pid) %>%
+  summarise(total_samples = n()) %>%
+  ungroup()
+
+# Next, calculate the number of bloom days at both thresholds.
+bloom_days_per_patient <- enterococcus_abundance %>%
+  # Create logical columns indicating if a sample is a bloom at each threshold
+  mutate(
+    is_bloom_10 = Enterococcus_relab > 0.10,
+    is_bloom_30 = Enterococcus_relab > 0.30
+  ) %>%
+  # Group by patient to sum up the bloom days
+  group_by(pid) %>%
+  summarise(
+    bloom_days_10 = sum(is_bloom_10, na.rm = TRUE),
+    bloom_days_30 = sum(is_bloom_30, na.rm = TRUE)
+  ) %>%
+  ungroup()
+
+# --- 3. Create the Plots ---
+
+# Plot 1: Distribution of the total number of samples per patient
+p1 <- ggplot(total_samples_per_patient, aes(x = total_samples)) +
+  geom_histogram(binwidth = 1, fill = "skyblue", color = "black", alpha = 0.8) +
+  scale_x_continuous(breaks = seq(0, 30, by = 5)) + # Adjust sequence as needed
+  labs(
+    title = "A) Distribution of Samples per Patient",
+    x = "Total Number of Stool Samples Collected for each patient",
+    y = "Number of Patients"
+  ) +
+  theme_minimal(base_size = 11) +
+  theme(plot.title = element_text(face = "bold"))
+
+# Plot 2: Distribution of the number of bloom days
+# We need to pivot the data to a longer format to plot both thresholds together.
+p2 <- bloom_days_per_patient %>%
+  pivot_longer(
+    cols = c(bloom_days_10, bloom_days_30),
+    names_to = "threshold",
+    values_to = "bloom_days"
+  ) %>%
+  mutate(
+    threshold = factor(threshold,
+                       levels = c("bloom_days_10", "bloom_days_30"),
+                       labels = c("Bloom Definition: >10% Abundance", "Bloom Definition: >30% Abundance"))
+  ) %>%
+  ggplot(aes(x = bloom_days)) +
+  # Use a single histogram geom, the faceting will split it.
+  geom_histogram(binwidth = 1, fill = "#404080", color = "white", alpha = 0.9) +
+  # Create separate panels for each threshold definition.
+  facet_wrap(~ threshold, scales = "free_y") +
+  labs(
+    title = "B) Distribution of Enterococcus Bloom Days",
+    x = "Number of Samples in Bloom State for each patient",
+    y = "Number of Patients"
+  ) +
+  theme_minimal(base_size = 11) +
+  theme(
+    plot.title = element_text(face = "bold"),
+    strip.text = element_text(face = "bold") # Bolds the facet titles
+  )
+
+
+
+```
 
 
 ```{r}
@@ -99,7 +173,7 @@ analysis_data <- all_patients %>%
 
 # --- 5. Perform Correlation and Plot ---
 # Now we create the scatter plot to visualize the relationship.
-ggplot(analysis_data, aes(x = broad_spectrum_exposure_days, y = proportion_in_bloom)) +
+bloom0.1 <- ggplot(analysis_data, aes(x = broad_spectrum_exposure_days, y = proportion_in_bloom)) +
   geom_point(alpha = 0.7, size = 3, color = "#0072B2") +
   # Add a regression line to show the trend
   geom_smooth(method = "lm", se = FALSE, color = "#D55E00", linetype = "dashed") +
@@ -114,9 +188,9 @@ ggplot(analysis_data, aes(x = broad_spectrum_exposure_days, y = proportion_in_bl
     y = "Proportion of Time in Enterococcus Bloom State\n(>10% Abundance)",
     caption = "Each point represents one patient.. Bloom duration is normalized by sampling frequency."
   ) +
-  theme_minimal(base_size = 14) +
+  theme_minimal(base_size = 11) +
   theme(
-    plot.title = element_text(face = "bold", size = 16),
+    plot.title = element_text(face = "bold", size = 12),
     panel.grid.minor = element_blank(),
     panel.border = element_rect(color = "grey80", fill = NA)
   )
@@ -158,7 +232,7 @@ analysis_data_high <- all_patients %>%
 
 # --- 5. Perform Correlation and Plot ---
 # Now we create the scatter plot to visualize the relationship.
-ggplot(analysis_data_high, aes(x = broad_spectrum_exposure_days, y = proportion_in_bloom)) +
+bloom0.3 <- ggplot(analysis_data_high, aes(x = broad_spectrum_exposure_days, y = proportion_in_bloom)) +
   geom_point(alpha = 0.7, size = 3, color = "#0072B2") +
   # Add a regression line to show the trend
   geom_smooth(method = "lm", se = FALSE, color = "#D55E00", linetype = "dashed") +
@@ -173,11 +247,19 @@ ggplot(analysis_data_high, aes(x = broad_spectrum_exposure_days, y = proportion_
     y = "Proportion of Time in Enterococcus Bloom State\n(>30% Abundance)",
     caption = "Each point represents one patient.. Bloom duration is normalized by sampling frequency."
   ) +
-  theme_minimal(base_size = 14) +
+  theme_minimal(base_size = 11) +
   theme(
-    plot.title = element_text(face = "bold", size = 16),
+    plot.title = element_text(face = "bold", size = 12),
     panel.grid.minor = element_blank(),
     panel.border = element_rect(color = "grey80", fill = NA)
   )
+```
+
+```{r}
+
+# --- 4. Arrange the Plots Side-by-Side ---
+# Use the patchwork library to combine the two plots into a single figure.
+p1 + p2 + bloom0.1 + bloom0.3
+ggsave('../data/R34_pt_enterococcus_bloom.png', width = 12, height = 10)
 ```
 
