--- a/scripts/R33_germfree.Rmd
+++ b/scripts/R33_germfree.Rmd
@@ -12,6 +12,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(janitor)
 library(ggrepel)
+library(scales)
 ```
 
 ```{r}
@@ -149,6 +150,87 @@ ggplot(plot_data, aes(x = treatment_group, y = logCFU, color = tube_id)) +
   
   # Set the y-axis to start at a reasonable value
   coord_cartesian(ylim = c(4, 5.5))
+
+
+```
+# 48h after gavage
+
+```{r}
+# Load the data from the CSV file.
+# The `read_csv` function is great because it handles column types automatically.
+raw_data <- read_tsv("../data/7_29_25_germ_free_faecalis_gavage - sheet1.tsv")
+
+# Clean and prepare the data for plotting.
+plot_data <- raw_data %>%
+  # The column names have spaces, so we use backticks `` to refer to them.
+  # First, filter for only the groups of interest (starting with "1-" or "2-").
+  filter(str_starts(`Mouse Group`, "1-") | str_starts(`Mouse Group`, "2-")) %>%
+  # We can only plot values greater than 0 on a log scale.
+  mutate(CFUs_per_GramStool = if_else(CFUs_per_GramStool == 0, 1, CFUs_per_GramStool)) %>% 
+  # The 'mutate' function creates new columns.
+  mutate(
+    # Convert the 'Time Point' text into a numerical hour for the x-axis.
+    Time_h = case_when(
+      `Time Point` == "4h post gavage" ~ 4,
+      `Time Point` == "8h post gavage" ~ 8,
+      `Time Point` == "24h post gavage" ~ 24,
+      `Time Point` == "48h post gavage" ~ 48,
+    ),
+    # Create clean labels for the two treatment groups based on the new request.
+    Treatment = case_when(
+      str_starts(`Mouse Group`, "1-") ~ "E. faecalis + Sucrose Water",
+      str_starts(`Mouse Group`, "2-") ~ "E. faecalis + Regular Water"
+    )
+  )
+
+# Create a smaller data frame just for the labels at the last time point.
+label_data <- plot_data %>%
+  group_by(TubeID) %>%
+  filter(Time_h == max(Time_h))
+
+# Generate the plot.
+ggplot(plot_data, aes(x = Time_h, y = `CFUs_per_GramStool`, group = `Mouse Group`, color = Treatment)) +
+  # Draw lines connecting the points for each mouse.
+  geom_line(alpha = 0.8, linewidth = 1, color = 'gray') +
+  # Add points to show the exact measurement at each time point.
+  geom_point(size = 2) +
+  
+  # Use ggrepel to add mouse ID labels that don't overlap.
+  # geom_text_repel(data = label_data, aes(label = `Mouse Group`),
+  #                 fontface = "bold",
+  #                 nudge_x = 2, # Push labels slightly to the right of the last point
+  #                 direction = "y",
+  #                 hjust = 0) +
+
+  # Facet_wrap creates separate panels for each treatment group.
+  facet_wrap(~Treatment) +
+  
+  # Set the Y axis to a log10 scale and format the labels as 10^x
+  scale_y_log10(
+    breaks = trans_breaks("log10", function(x) 10^x),
+    labels = trans_format("log10", math_format(10^.x))
+  ) +
+  
+   # This is the key part to set the x-axis breaks
+  scale_x_continuous(breaks = c(4, 8, 24, 48)) +
+  
+  # Use a clean theme and add informative titles and labels.
+  theme_bw(base_size = 14) +
+  labs(
+    title = "E. faecalis Colonization Over Time in Germ-Free Mice",
+    x = "Time Post-Gavage (Hours)",
+    y = "CFU / gram of feces"
+  ) +
+  
+  # Customize the plot's appearance.
+  theme(
+    legend.position = "none", # Legend is redundant because of the panel titles.
+    plot.title = element_text(face = "bold", hjust = 0.5),
+    strip.text = element_text(face = "bold", size = 12) # Style the panel titles.
+  ) +
+  
+  # Ensure the labels have enough space on the right.
+  coord_cartesian(xlim = c(0, 53))
 
 
 ```
